--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.12.0",
     "babel-polyfill": "6.8.0",
     "bootstrap": "3.3.6",
+    "classnames": "^2.2.5",
     "formsy-react": "^0.18.1",
     "jquery": "2.2.3",
     "lodash": "^4.13.1",
